--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: LonlyPan Blog
-url: "http://LonlyPan/LonlyPan.github.io"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
+url: "http://LonlyPan.com"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
 baseurl: "" # the prefix of your site uri, eg. `"/jekyll-theme-EasyBook"` or empty string `""`
 #timezone: Asia/Chongqing
 description: >
