--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ profile: One sentence introducing yourself.
 #github_username:  github_username
 profile_links:
   Email: "mailto:your_email@example.com"
-  GitHub: "https://github.com/laobubu/jekyll-theme-EasyBook"
+  GitHub: "https://github.com/lanlypan/jekyll-theme-EasyBook"
   # You can add more profile links above, or edit _includes/sidebar.html 
 
 # Comment Service (Disqus or 多说)
@@ -29,7 +29,7 @@ header:
   links:             # Links on the header. Link to in-site page with a slash as prefix
     About: /about/
     Category: /category/
-    Donate: https://lonlypan.com/donate.html
+    Donate: https://laobubu.net/donate.html
 
 permalink: /archivers/:title
 plugins:
