--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 # Your information
 email: lonlypan@gmail.com
 author: LonlyPan
-avatar: "//www.gravatar.com/avatar/lonlypan@gmail.com_md5?d=mm&s=135"
+avatar: "/header.ico"
 profile: One sentence introducing yourself.
 #twitter_username: twitter_username
 #github_username:  github_username
