--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: "http://lonlypan.com"    # the protocol and hostname of your site, eg. `htt
 baseurl: "" # the prefix of your site uri, eg. `"/jekyll-theme-EasyBook"` or empty string `""`
 #timezone: Asia/Chongqing
 description: >
-  One or more sentences introducing this blog.
+  啥事都做，一事无成
 
 # Your information
 email: lonlypan@gmail.com
@@ -14,8 +14,9 @@ profile: One sentence introducing yourself.
 #twitter_username: twitter_username
 #github_username:  github_username
 profile_links:
-  Email: "lonlypan@gmail.com"
+  Project: "https://wifimake.com/lonlypan"
   GitHub: "https://github.com/lonlypan"
+  Email: "lonlypan@gmail.com"
   # You can add more profile links above, or edit _includes/sidebar.html 
 
 # Comment Service (Disqus or 多说)
