--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ excerpt_separator: <!--more-->
 
 header:
   links:             # Links on the header. Link to in-site page with a slash as prefix
-    About: /about/
-    Category: /category/
-    More: https://wifimake.com
+    关于: /about/
+    分类: /category/
+    更多: https://wifimake.com
 
 permalink: /archivers/:title
 plugins:
