--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: "http://lonlypan.com"    # the protocol and hostname of your site, eg. `htt
 baseurl: "" # the prefix of your site uri, eg. `"/jekyll-theme-EasyBook"` or empty string `""`
 #timezone: Asia/Chongqing
 description: >
-   123.
+  Write an awesome description for your new site here. You can edit this
 # Your information
 email: lonlypan@gmail.com
 author: LonlyPan
