--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ header:
   links:             # Links on the header. Link to in-site page with a slash as prefix
     分类: /category/
     关于: /about/
-    更多: https://wifimake.com
-    996.ICU
+    996.ICU: https://wifimake.com
+    
 
 permalink: /archivers/:title
 plugins:
