--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ profile: 啥事都做，一事无成
 profile_links:
   Project: "https://wifimake.com/lonlypan"
   GitHub: "https://github.com/lonlypan"
-  996.ICU: "lonlypan@gmail.com"
+  996.ICU: "https://996.icu"
   # You can add more profile links above, or edit _includes/sidebar.html 
 
 # Comment Service (Disqus or 多说)
