--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ header:
   links:             # Links on the header. Link to in-site page with a slash as prefix
     分类: /category/
     关于: /about/
-    更多: https://wifimake.com
+    作品站: https://wifimake.com
     
 
 permalink: /archivers/:title
