--- a/_config.yml
+++ b/_config.yml
@@ -58,3 +58,7 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
   math_engine: mathjax
+
+
+# Google Analytics
+google_analytics: UA-154158357-1
