--- a/_config.yml
+++ b/_config.yml
@@ -61,5 +61,5 @@ kramdown:
 
 
 # Google Analytics
-google_analytics: UA-154158357-1
-baidu-analysis：f56279d43c733d547ea06f75f8e05d89
+google_analytics:UA-154158357-1
+baidu-analysis:f56279d43c733d547ea06f75f8e05d89
