--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ profile_links:
 
 # Google Analytics
 google_analytics: UA-154158357-1
-baidu-analysis: f56279d43c733d547ea06f75f8e05d89
+baidu_analytics: f56279d43c733d547ea06f75f8e05d89
 
 excerpt_separator: <!--more-->
 
