--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ header:
   links:             # Links on the header. Link to in-site page with a slash as prefix
     分类: /category/
     关于: /about/
-    作品站: https://wifimake.com
+    书影: /Book/
+    作品站: /Project/
     
 
 permalink: /archivers/:title
